# lifedata

./: Dockerfile  README.md  docker-compose.yml  environment.yml  mypy-report.xml  pyproject.toml  pytest.ini  setup.py
examples/csv-sampleview/: .env  .gitignore  README.md  package.json
examples/csv-sampleview/public/: index.html
lifedata/: __init__.py  alembic.ini
lifedata/annotations/: __init__.py  annotation.py  annotation_count.py  annotation_service.py  annotator.py  assignment.py  authentication.py  consultation.py  events.py  queriedsample.py  sample.py  sample_repository.py  skip.py
lifedata/cli/: analyse.py  cli.py  configure_db.py  dump.py  init.py  init_test.py  load.py  migrate.py  query_db_state.py  reports.py  start.py  start_test.py  webui_setup.py
lifedata/lifedata_api/: __init__.py  annotationqueue.py  api.py  label_config.py  load_lifedata_api.py  sample_view.py  ui_string_definition.py
lifedata/logging/: __init__.py  stdlib_compat.py
lifedata/persistence/: __init__.py  annotation_db_repository.py  annotator_repository.py  assignment_repository.py  database.py  event_repository.py  inspection.py  load_annotations.py  load_queryset.py  load_samples.py  model_training_service.py  models.py  queryset_db_repository.py  sample_db_repository.py
lifedata/webapi/: annotationcount.py  annotationqueue.py  auth.py  encoders.py  keycloak_jwt_decoder.py  label_config.py  main.py  no_auth_decoder.py  providers.py  sample_view.py  sample_widget.py  samples.py  samples_test.py  ui_strings.py
lifedata/webui/: .env  .gitignore  Dockerfile  package.json
(+61 files in other folders)
